force-app/main/default/objects/Knowledge_Suggestion__c/Knowledge_Suggestion__c.object-meta.xml
<CustomObject>
    <label>Knowledge Suggestion</label>
    <pluralLabel>Knowledge Suggestions</pluralLabel>
    <description>Knowledge Suggestion</description>
    <nameField>
        <label>Knowledge Suggestion Name</label>
        <type>AutoNumber</type>
        <displayFormat>KSG-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>