force-app/main/default/objects/Knowledge_Suggestion__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <label>Accepted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Accepted</description>
</CustomField>