force-app/main/default/objects/Knowledge_Suggestion__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Knowledge Suggestions</relationshipLabel>
    <relationshipName>Knowledge_Suggestions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
</CustomField>