force-app/main/default/objects/Knowledge_Suggestion__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>120</length>
    <description>Title</description>
</CustomField>